@@ -538,7 +538,12 @@ around get_status => sub {
                 }
                 else {
                     $out->{propaganda_boost} = $self->propaganda_boost;
-                    $out->{propaganda_boost} = 50 if ($out->{propaganda_boost} > 50);
+                    if (time < $self->empire->happiness_boost->epoch) {
+                        $out->{propaganda_boost} = 75 if ($out->{propaganda_boost} > 75);
+                    }
+                    else {
+                        $out->{propaganda_boost} = 50 if ($out->{propaganda_boost} > 50);
+                    }
                 }
                 $out->{neutral_entry} = format_date($self->neutral_entry);
             }
@@ -1440,13 +1445,14 @@ sub recalc_stats {
     # If using spies to boost happiness rate, best rate can be a bit variable.
     if ($self->unhappy == 1) {
         my $happy = $self->happiness;
-        my $max_rate =    150_000_000_000;
+        my $max_rate =    150_000_000_000 / ((time < $self->empire->happiness_boost->epoch) ? 1.25 : 1);
+        my $max_time =    720 / ((time < $self->empire->happiness_boost->epoch) ? 1.25 : 1);
         if ($happy < -1 * (120 * $max_rate)) {
             my $div = 1;
             my $unhappy_time = DateTime->now->subtract_datetime_absolute($self->unhappy_date);
             my $unh_hours = $unhappy_time->seconds/(3600);
-            if ($unh_hours < 720) {
-                $div = 720 - $unh_hours;
+            if ($unh_hours < $max_time) {
+                $div = $max_time - $unh_hours;
             }
             my $new_rate = int(abs($self->happiness)/$div);
             $max_rate = $new_rate if $new_rate > $max_rate;
