@@ -25,6 +25,7 @@
  - Mod: Excavs show in arch min in order of distance.
  - Mod: Default ships in fleet tab is now 1.
  - Mod: Make all the big numbers more readable (UI side).
+ - Mod: Happiness Boost works on max rates.
 
 3.0911:
  - Add: Reduce opacity for less-well-controlled stars.
